--- a/src/components/auth/Auth.css
+++ b/src/components/auth/Auth.css
@@ -1,8 +1,31 @@
 /* Login Page */
 
+
 .login-page-container {
     background-image: url('./Lauren_v4.png');
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
+
 }
+
+/* .login-form {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+} */
+
+.login-header {
+    font-family: Righteous;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 25px;
+    line-height: 31px;
+    text-align: center;
+    color: #FEDA6A;
+    width: 129px;
+    height: 30px;
+}
+/* .login-input {
+
+} */
