--- a/src/components/search/Search.css
+++ b/src/components/search/Search.css
@@ -30,9 +30,41 @@
     color: #FEDA6A;
 }
 
+.company-results-card {
+    background-color: #6A6A6A;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    color: white;
+    padding: 15px;
+    width: 40%;
+    margin: 20px;
+    border-radius: 10px;
+    
+}
 
+.view-interviews-link {
+    font-size: 15px;
+    color: white;
+    font-weight: bolder;
+}
 
+.view-interviews-link:hover {
+    font-size: 15px;
+    color: #FEDA6A;
+    text-decoration: none;
+}
 
+.company-search-results-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+/* Company Details Page */
+
+.company-jumbo {
+    background-color: #FEDA6A;
+    color: white;
+}
 
 /* Mobile Styles */
 @media screen and (max-width: 900px) {
@@ -42,6 +74,17 @@
         margin: 0 auto;
         display: flex;
         margin-top: 20px;
+    }
+
+    .company-results-card {
+        background-color: #6A6A6A;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        color: white;
+        padding: 15px;
+        width: 90%;
+        margin: 20px;
+        border-radius: 10px;
+        
     }
     
 }
