--- a/src/components/search/Search.css
+++ b/src/components/search/Search.css
@@ -110,6 +110,33 @@
     justify-content: center;
     flex-wrap: wrap;
 }
+.favorited {
+    color: #FEDA6A;
+    margin-left: 5px;
+}
+
+.favorite {
+    color: white;
+    margin-left: 5px;
+}
+
+.interview-card-username {
+    color: white;
+    margin-left: 10px;
+}
+
+.interview-card-username:hover {
+    color: #FEDA6A;
+    text-decoration: none;
+}
+.bolder {
+    font-weight: bolder;
+}
+img {
+    border-radius: 200px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+}
 
 /* Mobile Styles */
 @media screen and (max-width: 900px) {
