--- a/src/components/search/Search.css
+++ b/src/components/search/Search.css
@@ -133,8 +133,10 @@
     font-weight: bolder;
 }
 img {
-    border-radius: 200px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    /* border-radius: 200px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
+    /* width:10%;
+    height: 5%; */
 
 }
 
