--- a/src/components/favorites/Favorites.css
+++ b/src/components/favorites/Favorites.css
@@ -13,22 +13,34 @@
 }
 
 .filter-buttons {
-
     background-color: #FEDA6A;
     border-color: #FEDA6A;
 }
 
+.filter-buttons:hover {
+    background-color: white;
+    border-color: #FEDA6A;
+    color: #FEDA6A;
+}
+
 .filter-buttons-toolbar {
-    margin: 0 auto;
+    margin-left: 50px;
 }
 
 .filter-buttons-label {
     text-align: right;
 }
+
+
+
 /* Mobile Styles */
 
 @media screen and (max-width: 900px) {
     
-
+    .filter-buttons-toolbar {
+        margin: 0 auto;
+        text-align: center;
+        margin: 10px;
+    }
     
 }
