--- a/src/components/interviews/Interviews.css
+++ b/src/components/interviews/Interviews.css
@@ -1,3 +1,34 @@
-.filter-buttons-toolbar {
+.filter-radio-toolbar {
+    /* margin: 0 auto; */
+    margin-right: auto;
+    margin-left: 45px;
+    color: #FEDA6A;
+    font-weight: bold;
+}
+
+.filterId {
     margin: 10px;
+}
+.radio-buttons {
+    margin-right: 9px;
+    background-color: #FEDA6A;
+}
+
+
+/* Mobile Styles */
+
+@media screen and (max-width: 900px) {
+    
+    
+    .filter-radio-toolbar {
+        margin: 0 auto;
+        color: #FEDA6A;
+        font-weight: bold;
+        margin-right: 10px;
+        margin-left: 10px;
+        text-align: center;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
 }
