--- a/src/components/profile/Profile.css
+++ b/src/components/profile/Profile.css
@@ -13,7 +13,8 @@
     border-radius: 50%;
     width: 30%;
     z-index: +3;
-    margin-top:-70px
+    /* margin-top:-70px */
+    border: 4px solid rgba(255, 255, 255, 0.753);
 }
 
 /* Generic User Profile */
