--- a/src/components/auth/Auth.css
+++ b/src/components/auth/Auth.css
@@ -12,7 +12,7 @@
 }
 
 
-.login-form input, .register-form input, .register-form select {
+.login-input, .register-form input, .register-form select {
     margin: 0 auto;
     width: 200px;
     margin-top: 15px;
@@ -70,6 +70,8 @@
 .register-link {
     margin-bottom: 80px;
 }
+
+
 /* Register Page */
 
 @media screen and (max-width: 900px) {
