--- a/src/components/profile/Profile.css
+++ b/src/components/profile/Profile.css
@@ -62,6 +62,12 @@ text-align: right;
     background-color: white;
 }
 
+#upload_widget {
+    margin-top: 10px;
+    padding: 1px 10px;
+    border: 1px solid #474B4F;
+    font-size: small;
+}
 
 /* Mobile Styles */
 @media screen and (max-width: 900px) {
