--- a/src/components/auth/Auth.css
+++ b/src/components/auth/Auth.css
@@ -58,6 +58,7 @@
     background-color: #FEDA6A;
     border-color: #FEDA6A;
     margin-bottom: 15px;
+    font-weight: bold;
 }
 
 
@@ -65,6 +66,7 @@
     background-color: white;
     border-color: #FEDA6A;
     color: #FEDA6A;
+    font-weight: bold;
 }
 
 .login-header, .register-header {
