--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -11,6 +11,7 @@
     border: 1px solid #FEDA6A;
     margin: 0 auto;
     margin-top: 20px;
+    font-weight: bold;
 }
 
 #home-button:hover {
@@ -19,11 +20,13 @@
     margin: 0 auto;
     background-color: white;
     margin-top: 20px;
+    font-weight: bold;
 }
 
 #home-button:focus {
     box-shadow:0 0 0 0.2rem rgba(211, 211, 211, 0.698);
     border-color: rgba(211, 211, 211, 0.726);
+    font-weight: bold;
 }
 
 .home-button-container {
