--- a/src/components/profile/Profile.css
+++ b/src/components/profile/Profile.css
@@ -47,7 +47,7 @@ font-family: Righteous;
 }
 
 .edit-button-container {
-text-align: right;
+    text-align: right;
 }
 
 .profile-button {
@@ -69,6 +69,17 @@ text-align: right;
     padding: 1px 10px;
     border: 1px solid #474B4F;
     font-size: small;
+}
+
+.friends-following {
+    font-size: 1.25rem;
+    color: white;
+}
+
+.friends-following:hover {
+    font-size: 1.25rem;
+    color: white;
+    text-decoration: underline;
 }
 
 /* Mobile Styles */
